# polyview

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
agents/: perspective_identification.py  query_generation_agent.py  search_agent.py  topic_refinement.py
core/: llm_config.py  state.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  constants.ts  index.css  mock-data.json  types.ts
frontend/src/components/: AnalysisDisplay.tsx  CollapsibleSection.css  FollowUpInput.tsx  PerspectiveCard.tsx  ProgressTracker.css  ProgressTracker.tsx  Settings.css  Settings.tsx  Spinner.tsx  SummaryView.tsx  TopicInput.tsx
frontend/src/components/icons/: CircleIcon.tsx  CogIcon.tsx  InformationCircleIcon.tsx  QuestionMarkCircleIcon.tsx  ShieldCheckIcon.tsx  ShieldExclamationIcon.tsx  StarIcon.tsx
frontend/src/services/: polyViewAgentService.ts
src/: main.py  visualisation.ipynb
src/agents/: graph.py  perspective_identification.py  query_generation_agent.py  search_agent.py
src/core/: state.py
src/polyview/: main.py
src/polyview/agents/: search_agent.py
src/polyview/api/: main.py  models.py
src/polyview/api/routes/: analysis.py
src/polyview/core/: llm_config.py  logging.py  state.py
src/polyview/tasks/: perspective_clustering.py  perspective_identification.py  perspective_synthesis.py  query_generation_agent.py  summarize.py  topic_refinement.py  web_scraper.py
src/polyview/utils/: helper.py  llm.py  retry.py
src/polyview/workflows/: perspective_analysis.py  research_workflow.py  search_and_perspective_identification.py  summarization_workflow.py
src/tasks/: summarize.py  topic_refinement.py
src/workflows/: research_workflow.py  search_and_perspective_identification.py
tests/: conftest.py
tests/agents/: test_search_agent.py  test_search_agent_nodes.py  test_topic_refinement.py
tests/integration/agents/: test_search_agent.py
tests/integration/tasks/: test_perspective_clustering_integration.py  test_topic_refinement.py
tests/tasks/: test_perspective_clustering.py  test_perspective_identification.py  test_perspective_synthesis.py
