[project]
name = "polyview"
version = "0.1.0"
description = "A multi-perspective news analysis assistant."
requires-python = ">=3.13,<4.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langchain-core~=0.3.58",
    "langgraph~=0.4.8",
    "langchain-community~=0.3.12",
    "langchain-google-genai~=2.1.5",
    "langchain-tavily~=0.2.5",
    "python-dotenv~=1.1.0",
    "pydantic~=2.11.7",
    "notebook (>=7.4.4,<8.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "websockets (>=15.0.1,<16.0.0)",
]

[tool.poetry.group.dev.dependencies]
langgraph-cli = { extras = ["inmem"], version = "^0.4.2" }
pytest = "^8.4.2"
ruff = "^0.12.12"
pre-commit = "^4.3.0"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
addopts = "-m \"not integration\""


[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
unsafe-fixes = false
src = ["src", "tests"]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "N", # pep8-naming
    "A", # prevent built-in names shadowing
    "C4", # flake8-comprehensions
    "TID", # flake8-tidy-imports
    "TCH", # type-checking imports
    "PT", # pytest-style checks
]

ignore = [
    "E501", # Line length (controlled by Ruff): ignore E501 to manage line length via Ruff
    "A003", # Allow class attribute 'id' even though it shadows built-in
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["polyview"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true